more editing - fousing on chapter 4 and 6

--- a/preamble.sty
+++ b/preamble.sty
@@ -161,7 +161,7 @@
 % generic affine Schur algebras
 \newcommand{\generic}[1][n,r]{\hat{G}(#1)}
 
-% transpose operator
+% transpose symbol
 \newcommand{\transpose}{\top}
 
 % generic category
